--- a/index.html
+++ b/index.html
@@ -364,7 +364,7 @@
                                 <!-- product item -->
                                 <div class="col l-2-4 m-4 c-6 home-product-item__wrapper">
                                     <a class="home-product-item">
-                                        <div class="home-product-item__img" style="background-image: url(/assets/img/vo.jpg);" ></div>
+                                        <div class="home-product-item__img" style="background-image: url(https://icdn.dantri.com.vn/thumb_w/640/2017/1-1510967806416.jpg);" ></div>
                                         <h4 class="home-product-item__name">Phương Tin cute, xinh gái, dễ thương, nhất hệ mặt trời</h4>
                                         <div class="home-product-item__price">
                                             <span class="home-product-item__price-old">1.500.000đ</span>
@@ -405,7 +405,7 @@
 
                                 <div class="col l-2-4 m-4 c-6 ">
                                     <a class="home-product-item">
-                                        <div class="home-product-item__img" style="background-image: url(/assets/img/vo.jpg);" ></div>
+                                        <div class="home-product-item__img" style="background-image: url(https://icdn.dantri.com.vn/thumb_w/640/2017/1-1510967806416.jpg);" ></div>
                                         <h4 class="home-product-item__name">Phương Tin cute, xinh gái, dễ thương, nhất hệ mặt trời</h4>
                                         <div class="home-product-item__price">
                                             <span class="home-product-item__price-old">1.500.000đ</span>
@@ -446,7 +446,7 @@
 
                                 <div class="col l-2-4 m-4 c-6 ">
                                     <a class="home-product-item">
-                                        <div class="home-product-item__img" style="background-image: url(/assets/img/vo.jpg);" ></div>
+                                        <div class="home-product-item__img" style="background-image: url(https://icdn.dantri.com.vn/thumb_w/640/2017/1-1510967806416.jpg);" ></div>
                                         <h4 class="home-product-item__name">Phương Tin cute, xinh gái, dễ thương nhất hệ mặt trời Yêu em nhiều gfhsdgfhsdgbfhd </h4>
                                         <div class="home-product-item__price">
                                             <span class="home-product-item__price-old">1.500.000đ</span>
@@ -487,7 +487,7 @@
 
                                 <div class="col l-2-4 m-4 c-6 ">
                                     <a class="home-product-item">
-                                        <div class="home-product-item__img" style="background-image: url(/assets/img/vo.jpg);" ></div>
+                                        <div class="home-product-item__img" style="background-image: url(https://icdn.dantri.com.vn/thumb_w/640/2017/1-1510967806416.jpg);" ></div>
                                         <h4 class="home-product-item__name">Phương Tin cute, xinh gái, dễ thương, nhất hệ mặt trời</h4>
                                         <div class="home-product-item__price">
                                             <span class="home-product-item__price-old">1.500.000đ</span>
@@ -528,7 +528,7 @@
 
                                 <div class="col l-2-4 m-4 c-6 ">
                                     <a class="home-product-item">
-                                        <div class="home-product-item__img" style="background-image: url(/assets/img/vo.jpg);" ></div>
+                                        <div class="home-product-item__img" style="background-image: url(https://icdn.dantri.com.vn/thumb_w/640/2017/1-1510967806416.jpg);" ></div>
                                         <h4 class="home-product-item__name">Phương Tin cute, xinh gái, dễ thương, nhất hệ mặt trời</h4>
                                         <div class="home-product-item__price">
                                             <span class="home-product-item__price-old">1.500.000đ</span>
@@ -569,7 +569,7 @@
 
                                 <div class="col l-2-4 m-4 c-6 ">
                                     <a class="home-product-item">
-                                        <div class="home-product-item__img" style="background-image: url(/assets/img/vo.jpg);" ></div>
+                                        <div class="home-product-item__img" style="background-image: url(https://icdn.dantri.com.vn/thumb_w/640/2017/1-1510967806416.jpg);" ></div>
                                         <h4 class="home-product-item__name">Phương Tin cute, xinh gái, dễ thương, nhất hệ mặt trời</h4>
                                         <div class="home-product-item__price">
                                             <span class="home-product-item__price-old">1.500.000đ</span>
@@ -610,7 +610,7 @@
 
                                 <div class="col l-2-4 m-4 c-6 ">
                                     <a class="home-product-item">
-                                        <div class="home-product-item__img" style="background-image: url(/assets/img/vo.jpg);" ></div>
+                                        <div class="home-product-item__img" style="background-image: url(https://icdn.dantri.com.vn/thumb_w/640/2017/1-1510967806416.jpg);" ></div>
                                         <h4 class="home-product-item__name">Phương Tin cute, xinh gái, dễ thương, nhất hệ mặt trời</h4>
                                         <div class="home-product-item__price">
                                             <span class="home-product-item__price-old">1.500.000đ</span>
@@ -651,7 +651,7 @@
 
                                 <div class="col l-2-4 m-4 c-6 ">
                                     <a class="home-product-item">
-                                        <div class="home-product-item__img" style="background-image: url(/assets/img/vo.jpg);" ></div>
+                                        <div class="home-product-item__img" style="background-image: url(https://icdn.dantri.com.vn/thumb_w/640/2017/1-1510967806416.jpg);" ></div>
                                         <h4 class="home-product-item__name">Phương Tin cute, xinh gái, dễ thương, nhất hệ mặt trời</h4>
                                         <div class="home-product-item__price">
                                             <span class="home-product-item__price-old">1.500.000đ</span>
@@ -692,7 +692,7 @@
 
                                 <div class="col l-2-4 m-4 c-6 ">
                                     <a class="home-product-item">
-                                        <div class="home-product-item__img" style="background-image: url(/assets/img/vo.jpg);" ></div>
+                                        <div class="home-product-item__img" style="background-image: url(https://icdn.dantri.com.vn/thumb_w/640/2017/1-1510967806416.jpg);" ></div>
                                         <h4 class="home-product-item__name">Phương Tin cute, xinh gái, dễ thương, nhất hệ mặt trời</h4>
                                         <div class="home-product-item__price">
                                             <span class="home-product-item__price-old">1.500.000đ</span>
@@ -733,7 +733,7 @@
 
                                 <div class="col l-2-4 m-4 c-6 ">
                                     <a class="home-product-item">
-                                        <div class="home-product-item__img" style="background-image: url(/assets/img/vo.jpg);" ></div>
+                                        <div class="home-product-item__img" style="background-image: url(https://icdn.dantri.com.vn/thumb_w/640/2017/1-1510967806416.jpg);" ></div>
                                         <h4 class="home-product-item__name">Phương Tin cute, xinh gái, dễ thương, nhất hệ mặt trời</h4>
                                         <div class="home-product-item__price">
                                             <span class="home-product-item__price-old">1.500.000đ</span>
